2005-7-13  Bastian Holst  <bastianholst@gmx.de>

        * added the ability to deactivate the systray-icon

0.1 to 0.2
	-- Katapult --
	Feature: when there are no results, the query can be cleared or the
		display hidden (configurable) (as requested)
	Feature: word abbreviations can now be used (if you type the beginning
		of a word and press space, it will try to guess the word.
	Feature: if you type the beginning of a word besides the first word
		of an item, the query will start there (as requested)
	Feature: added the ability to backspace
	Improvement: the settings dialog no longer hides catalog pages when
		you click on the main catalog configuration page
	Optimize: actions are now handled more efficiently, and can easily be
		reused
	Bugfix: fixed a bug that caused the program to sometimes lock while
		automatically executing an action
	Bugfix: some duplicate items were not removed, which prevented
		automatic execution
	
	-- Program Catalog --
	Feature: added the ability to ignore programs without icons
	Feature: programs can be cataloged by executable name instead of
		the name from the .desktop file
	Bugfix: I think I nailed the crash-on-execute-program bug
	
	-- Bookmark Catalog --
	Feature: added the ability to include bookmarks from Mozilla

	-- Document Catalog --
	Feature: Katapult can now catalog your documents (in your home folder)

	-- Glass Display --
	Bufix: fixed a bug where the item text would sometimes leak into the
		action text
	Feature: fonts now dynamically resize to optimally fit text (configurable)