@@ -1,1 +1,7 @@
+Jean-Remy Falleri
+Jonathan Riddell
+Martin Meredith
+Bastian Holst <bastianholst@gmx.de>
+
+Original Author:
 Joe Ferris <jferris@optimistictech.com>
