@@ -1,3 +1,8 @@
+2005-7-30  Bastian Holst  <bastianholst@gmx.de>
+        
+        * created shortcut for the context-menu (ctrl+c)
+        * added us to the authors
+
 2005-7-13  Bastian Holst  <bastianholst@gmx.de>
 
         * added the ability to deactivate the systray-icon
